-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.0
-
None
-
-
856fb1ab44722f5165fb6b5dec0bd748006acd10 (qt/qtbase/5.12.2)
This seems to be a bug with XCB accessibility integration.
STEPS TO REPRODUCE
1. Download latest openSUSE Tumbleweed LiveCD with KDE (openSUSE-Tumbleweed-KDE-Live-i686-Snapshot20190126-Media.iso) from https://download.opensuse.org/tumbleweed/iso/openSUSE-Tumbleweed-KDE-Live-i686-Current.iso
2. Run desktop
3. Re-login
OBSERVED RESULT
From about 10 or more times, I get this crash for about 4 times.
EXPECTED RESULT
no crash
Backtrace from https://bugs.kde.org/show_bug.cgi?id=403884 attachment https://bugs.kde.org/attachment.cgi?id=117799 :
Thread 1 (Thread 0xb44b2840 (LWP 3294)):
[KCrash Handler]
#5 0xb49c18f4 in xcb_get_property_value_length (R=0x0) at xproto.c:3695
#6 0xb27d53a8 in QXcbNativeInterface::atspiBus (this=0x23b3310) at qxcbnativeinterface.cpp:417
#7 0xb27d5fa9 in QXcbNativeInterface::nativeResourceForIntegration (this=0x23b3310, resourceString=...) at qxcbnativeinterface.cpp:128
#8 0xb286ea8f in DBusConnection::getAddressFromXCB (this=0x2464640) at dbusconnection.cpp:96
#9 0xb286f289 in DBusConnection::DBusConnection (this=0x2464640, parent=0x0) at dbusconnection.cpp:82
#10 0xb28614c3 in QSpiAccessibleBridge::QSpiAccessibleBridge (this=0x246e1d0) at bridge.cpp:66
#11 0xb27b4d54 in QXcbIntegration::accessibility (this=0x23b9990) at qxcbintegration.cpp:413
#12 0xb6f869dd in platformAccessibility () at accessible/qaccessible.cpp:488
#13 QAccessible::setRootObject (object=0xbfa79cc8) at accessible/qaccessible.cpp:830
#14 0xb6fb2d1c in QGuiApplication::exec () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:116
#15 0xb75ee184 in QApplication::exec () at kernel/qapplication.cpp:2910
#16 0x004883d9 in main (argc=<optimized out>, argv=0xbfa79da4) at /usr/src/debug/kdeconnect-kde-1.3.3-2.1.i386/daemon/kdeconnectd.cpp:99
For Gerrit Dashboard: QTBUG-74067 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
254991,3 | xcb: check for nullptr when reading AT_SPI_BUS property | 5.12.2 | qt/qtbase | Status: MERGED | +2 | 0 |