xcb: check for nullptr when reading AT_SPI_BUS property

We always have to check the return value of xcb_get_property(),
but this code did not do it. These xcb functions do not check
for validity of the pointer, so we have to make sure that we pass-in
something valid:

 void *
 xcb_get_property_value (const xcb_get_property_reply_t *R)
 {
    return (void *) (R + 1);
 }

 int
 xcb_get_property_value_length (const xcb_get_property_reply_t *R)
 {
    return (R->value_len * (R->format / 8));
 }

Fixes: QTBUG-74067
Change-Id: Iabbc81e6079d96c7314d16dd78783de07f9ad629
Reviewed-by: Mikhail Svetkin <mikhail.svetkin@qt.io>
Reviewed-by: Frederik Gladhorn <frederik.gladhorn@qt.io>